Don't let full stops wrap on their lonesome.

--- a/assets/stylesheets/typography.scss
+++ b/assets/stylesheets/typography.scss
@@ -9,3 +9,7 @@ a {
     border-color: white;
   }
 }
+
+span.nowrap {
+  white-space: nowrap;
+}
